--- a/balance car(未推导版本)/USER/Balance Car.uvprojx
+++ b/balance car(未推导版本)/USER/Balance Car.uvprojx
@@ -643,6 +643,16 @@
               <FileType>1</FileType>
               <FilePath>..\HARDWARE\MPU6050\eMPL\inv_mpu_dmp_motion_driver.c</FilePath>
             </File>
+            <File>
+              <FileName>key.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\KEY\key.c</FilePath>
+            </File>
+            <File>
+              <FileName>led.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\LED\led.c</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
